fixed all tests in JavaUrl2JavaUri