@@ -39,8 +39,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}MyFile.ext, file:{}MyFile.ext"
-	}, backslash = false)
+			"file:{}MyFile.ext,   file:{}MyFile.ext",
+			"file:\\MyFile.ext,   %5CMyFile.ext",
+			"file:\\\\MyFile.ext, %5C%5CMyFile.ext",
+			"file:c:\\MyFile.ext, c:%5CMyFile.ext",
+	})
 	public void absoluteFile_unix(final ConversionFunction fun, final String inputStr, final String expectedStr)
 			throws Exception {
 		assertConversionEquals(fun, inputStr, expectedStr);
@@ -60,8 +63,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}myProject///folder///deep/myFile.ext//, file:{}myProject///folder///deep/myFile.ext//"
-	}, backslash = false)
+			"file:{}myProject///folder///deep/myFile.ext//,            file:{}myProject///folder///deep/myFile.ext//",
+			"file:\\myProject\\\\\\folder\\\\\\deep\\myFile.ext\\\\,   %5CmyProject%5C%5C%5Cfolder%5C%5C%5Cdeep%5CmyFile.ext%5C%5C",
+			"file:\\\\myProject\\\\\\folder\\\\\\deep\\myFile.ext\\\\, %5C%5CmyProject%5C%5C%5Cfolder%5C%5C%5Cdeep%5CmyFile.ext%5C%5C",
+			"file:c:\\myProject\\\\\\folder\\\\\\deep\\myFile.ext\\\\, c:%5CmyProject%5C%5C%5Cfolder%5C%5C%5Cdeep%5CmyFile.ext%5C%5C",
+	})
 	public void absoluteFileSlashesExcess_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
 	) throws Exception {
@@ -81,8 +87,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}myProject/myFolder/, file:{}myProject/myFolder/"
-	}, backslash = false)
+			"file:{}myProject/myFolder/,     file:{}myProject/myFolder/",
+			"file:\\myProject\\myFolder\\,   %5CmyProject%5CmyFolder%5C",
+			"file:\\\\myProject\\myFolder\\, %5C%5CmyProject%5CmyFolder%5C",
+			"file:c:\\myProject\\myFolder\\, c:%5CmyProject%5CmyFolder%5C",
+	})
 	public void absoluteFolderSlash_unix(final ConversionFunction fun, final String inputStr, final String expectedStr)
 			throws Exception {
 		assertConversionEquals(fun, inputStr, expectedStr);
@@ -102,8 +111,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}myProject///myFolder, file:{}myProject///myFolder"
-	}, backslash = false)
+			"file:{}myProject///myFolder,      file:{}myProject///myFolder",
+			"file:\\myProject\\\\\\myFolder,   %5CmyProject%5C%5C%5CmyFolder",
+			"file:\\\\myProject\\\\\\myFolder, %5C%5CmyProject%5C%5C%5CmyFolder",
+			"file:c:\\myProject\\\\\\myFolder, c:%5CmyProject%5C%5C%5CmyFolder",
+	})
 	public void absoluteFolderSlashesInbetween_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
 	) throws Exception {
@@ -123,8 +135,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}myProject///myFolder?query#fragment, file:{}myProject///myFolder?query#fragment"
-	}, backslash = false)
+			"file:{}myProject///myFolder?query#fragment,      file:{}myProject///myFolder?query#fragment",
+			"file:\\myProject\\\\\\myFolder?query#fragment,   %5CmyProject%5C%5C%5CmyFolder?query#fragment",
+			"file:\\\\myProject\\\\\\myFolder?query#fragment, %5C%5CmyProject%5C%5C%5CmyFolder?query#fragment",
+			"file:c:\\myProject\\\\\\myFolder?query#fragment, c:%5CmyProject%5C%5C%5CmyFolder?query#fragment",
+	})
 	public void absoluteFragmentQuery_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
 	) throws Exception {
@@ -144,8 +159,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}some/path/MyFile.ext, file:{}some/path/MyFile.ext"
-	}, backslash = false)
+			"file:{}some/path/MyFile.ext,     file:{}some/path/MyFile.ext",
+			"file:\\some\\path\\MyFile.ext,   %5Csome%5Cpath%5CMyFile.ext",
+			"file:\\\\some\\path\\MyFile.ext, %5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:c:\\some\\path\\MyFile.ext, c:%5Csome%5Cpath%5CMyFile.ext",
+	})
 	public void absoluteNestedFile_unix(final ConversionFunction fun, final String inputStr, final String expectedStr)
 			throws Exception {
 		assertConversionEquals(fun, inputStr, expectedStr);
@@ -164,8 +182,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}resource/..////, file:{}resource/..////"
-	}, backslash = false)
+			"file:{}resource/..////,        file:{}resource/..////",
+			"file:\\resource\\..\\\\\\\\,   %5Cresource%5C..%5C%5C%5C%5C",
+			"file:\\\\resource\\..\\\\\\\\, %5C%5Cresource%5C..%5C%5C%5C%5C",
+			"file:c:\\resource\\..\\\\\\\\, c:%5Cresource%5C..%5C%5C%5C%5C",
+	})
 	public void absolutePath_unix(final ConversionFunction fun, final String inputStr, final String expectedStr)
 			throws Exception {
 		assertConversionEquals(fun, inputStr, expectedStr);
@@ -185,8 +206,11 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}myProject/myFolder%23query, file:{}myProject/myFolder%23query"
-	}, backslash = false)
+			"file:{}myProject/myFolder%23query,    file:{}myProject/myFolder%23query",
+			"file:\\myProject\\myFolder%23query,   %5CmyProject%5CmyFolder%23query",
+			"file:\\\\myProject\\myFolder%23query, %5C%5CmyProject%5CmyFolder%23query",
+			"file:c:\\myProject\\myFolder%23query, c:%5CmyProject%5CmyFolder%23query",
+	})
 	public void absolutePseudoFragment_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
 	) throws Exception {
@@ -210,15 +234,22 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource(value = {
-			"file:{}, file:{}"
+			"file:{},   file:{}",
+			"file://,   file:",
+			"file:\\,   %5C",
+			"file:\\\\, %5C%5C",
+			"file:c:\\, c:%5C",
 	})
 	public void root_unix(final ConversionFunction fun, final String inputStr, final String expectedStr)
 			throws Exception {
-		if (inputStr.endsWith("//") || inputStr.endsWith("\\\\")) {
-			assertThrows(URISyntaxException.class, () -> new URI(inputStr));
+		final URL input = new URL(inputStr);
+		URI expected;
+		if ("file:".equals(expectedStr)) {
+			expected = new URI(null, "", null);
 		} else {
-			assertConversionEquals(fun, inputStr, expectedStr);
+			expected = new URI(expectedStr);
 		}
+		assertConversionEquals(fun, input, expected);
 	}
 	
 	@Override
@@ -235,7 +266,10 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource({
-			"file:/{}some/path/MyFile.ext, file:/{}some/path/MyFile.ext"
+			"file:/{}some/path/MyFile.ext,      file:/{}some/path/MyFile.ext",
+			"file:\\\\some\\path\\MyFile.ext,   %5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:\\\\\\some\\path\\MyFile.ext, %5C%5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:\\c:\\some\\path\\MyFile.ext, %5Cc%3A%5Csome%5Cpath%5CMyFile.ext",
 	})
 	public void absoluteWindowsPathSingleSlash_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
@@ -257,7 +291,10 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource({
-			"file://{}some/path/MyFile.ext, file://{}some/path/MyFile.ext"
+			"file://{}some/path/MyFile.ext,       file://{}some/path/MyFile.ext",
+			"file:\\\\\\some\\path\\MyFile.ext,   %5C%5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:\\\\\\\\some\\path\\MyFile.ext, %5C%5C%5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:\\\\c:\\some\\path\\MyFile.ext, %5C%5Cc%3A%5Csome%5Cpath%5CMyFile.ext",
 	})
 	public void absoluteWindowsPathDoubleSlash_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
@@ -279,7 +316,10 @@ public class TestJavaUrl2JavaUri_absolute extends ATestJavaUrl2JavaUri implement
 	@Override
 	@TestOnUnix
 	@ConversionSource({
-			"file:///{}some/path/MyFile.ext, file:///{}some/path/MyFile.ext"
+			"file:///{}some/path/MyFile.ext,        file:///{}some/path/MyFile.ext",
+			"file:\\\\\\\\some\\path\\MyFile.ext,   %5C%5C%5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:\\\\\\\\\\some\\path\\MyFile.ext, %5C%5C%5C%5C%5Csome%5Cpath%5CMyFile.ext",
+			"file:\\\\\\c:\\some\\path\\MyFile.ext, %5C%5C%5Cc%3A%5Csome%5Cpath%5CMyFile.ext",
 	})
 	public void absoluteWindowsPathTripleSlash_unix(
 			final ConversionFunction fun, final String inputStr, final String expectedStr
